# NeuOld

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/dropout_wrapper_learning_xor/: CMakeLists.txt  dropout_wrapper_learning_xor.cpp
example/full_connected_layer_learning_xor/: CMakeLists.txt  full_connected_layer_learning_xor.cpp
example/full_connected_layer_learning_xor_adagrad/: CMakeLists.txt  full_connected_layer_learning_xor_adagrad.cpp
include/neu/: basic_type.hpp  dropout_wrapper.hpp  full_connected_layer.hpp  index_range.hpp  kernel.hpp  layer_algorithm.hpp  layer_traits.hpp  tuple_algorithm.hpp  vector_io.hpp
include/neu/activate_func/: differential.hpp  identity.hpp  rectifier.hpp  sigmoid.hpp
include/neu/learning_rate_gen/: adagrad.hpp  fixed_learning_rate_gen.hpp
test/: CMakeLists.txt  dropout_wrapper.cpp  full_connected_layer.cpp  identity.cpp  include_main.hpp
test/activate_func/: CMakeLists.txt  rectifier.cpp  sigmoid.cpp
test/dropout_wrapper/: CMakeLists.txt  dropout_wrapper.cpp
test/full_connected_layer/: CMakeLists.txt  full_connected_layer.cpp
